# tv-server

./: .env  Cargo.toml  Dockerfile  fly.toml
src/: database.rs  error.rs  main.rs  todo
src/now_playing/: mod.rs  models.rs  websocket.rs
src/playlist/: api.rs  mod.rs  playlist_models.rs
src/schedule/: api.rs  mod.rs  schedule_models.rs
src/show/: api.rs  mod.rs  show_models.rs
