[package]
name = "tv-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
axum = "*"
serde = { version = "*", features = ["derive"] }
openssl = { version = "0.10.73", features = ["vendored"] }
async-trait = "0.1.88"
futures = "0.3.31"
tokio = "1.46.1"
tokio-macros = "2.5.0"

[dependencies.mongodb]
version = "3.2.4"

